force-app/main/default/objects/Campaign/fields/AddingReport__c.field-meta.xml
<CustomField>
    <fullName>AddingReport__c</fullName>
    <label>追加レポート</label>
    <type>Url</type>
</CustomField>