force-app/main/default/objects/Campaign/fields/CampaignNameDetail__c.field-meta.xml
<CustomField>
    <fullName>CampaignNameDetail__c</fullName>
    <label>キャンペーン名詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>