force-app/main/default/objects/Campaign/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>比較</fullName>
            </value>
            <value>
                <fullName>興味</fullName>
            </value>
            <value>
                <fullName>認知</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>