force-app/main/default/objects/Campaign/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>メモ</label>
    <type>TextArea</type>
</CustomField>