force-app/main/default/objects/Campaign/fields/RelatedReportURL1__c.field-meta.xml
<CustomField>
    <fullName>RelatedReportURL1__c</fullName>
    <label>関連レポートURL①</label>
    <type>Url</type>
</CustomField>