force-app/main/default/objects/Campaign/fields/RelatedReportURL2__c.field-meta.xml
<CustomField>
    <fullName>RelatedReportURL2__c</fullName>
    <label>関連レポートURL②</label>
    <type>Url</type>
</CustomField>