force-app/main/default/objects/Campaign/fields/RelatedReportURL3__c.field-meta.xml
<CustomField>
    <fullName>RelatedReportURL3__c</fullName>
    <label>関連レポートURL③</label>
    <type>Url</type>
</CustomField>