force-app/main/default/objects/Campaign/fields/ResponseRate__c.field-meta.xml
<CustomField>
    <fullName>ResponseRate__c</fullName>
    <formula>NumberOfResponses / NumberSent</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>レスポンス率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>