force-app/main/default/objects/Campaign/fields/SMPCampaignId__c.field-meta.xml
<CustomField>
    <fullName>SMPCampaignId__c</fullName>
    <externalId>true</externalId>
    <label>SMP_キャンペーンID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>