force-app/main/default/objects/Campaign/recordTypes/BusinessLawyersCPRecordType.recordType-meta.xml
<RecordType>
    <fullName>BusinessLawyersCPRecordType</fullName>
    <active>true</active>
    <label>BUSINESS LAWYERS</label>
</RecordType>